# cse5914_capstone_project

./: .gitignore  README.md  hash_image.py  list_tables.py  main.py  pyproject.toml  simple_api_request.py
comparison_tests/: sbert_comparison.py  sbert_comparison_examples.py
cse5914_capstone_project/: simple_api_request.py
example_audit_tables/: base_source.py  db_audit_log.py
tagsense/: config.py  database.py  registry.py  util.py  widgets.py
tagsense/controllers/: controller.py
tagsense/data_structures/: app_data_structure.py  data_structure.py  manual_data_structure.py  sqlite_table.py
tagsense/data_structures/data_structures/example01_stored_text/: stored_text.py
tagsense/data_structures/data_structures/example02_stored_random_text/: stored_random_text.py
tagsense/models/: base_table.py  db_audit_log.py  file_core_metadata.py  file_table.py  model.py
tagsense/natural_language_processing/: natural_language_generator.py  tag_generater.py
tagsense/processes/: app_process.py  base_process.py  preprocessing.py  process.py
tagsense/processes/exampleprocesses/: testprocesses.py
tagsense/processes/processes/ram_tag_generation/: pyproject.toml  ram_tag_generation.py
tagsense/searches/: app_search.py  base_file_search.py  search.py
tagsense/searches/all_files/: all_files_search.py
tagsense/views/: data_view_window.py  dialog_windows.py  help_content.md  main_window.py
tagsense/views/dialog_windows/: export_search.py  file_import.py  help.py  install_processes.py  run_processes.py  run_processes_test.py  settings.py
(+21 files in other folders)
